--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,31 +18,39 @@
             width: 60vw;
         }
         .button{
-                background-color: transparent;
-                border: 1px solid #222;
-                border-radius: 10px;
-                color: #222;
-                width: 80px;
-                padding-top: 4px;
-                padding-bottom: 4px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                font-weight: 500;
-            }
+            background-color: transparent;
+            border: 1px solid #222;
+            border-radius: 14px;
+            color: #222;
+            width: 80px;
+            padding-top: 4px;
+            padding-bottom: 4px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            font-weight: 500;
+            transition-delay: 0s;
+            transition: background 1s, color 1s;
+        }
+        .button:hover{
+        	text-decoration: none;
+        	color: #eee;
+        	background: #222;
+            border: 1px solid #222;
+        }
 	</style>
-	<body style="background-color:white;">
+	<body style="background-color:white;" onload="setDescription()" onresize="setDescription()">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12" style="padding:0;">
 					<img id="background" onload="fade()" src="/static/images/wall2.jpg" style="opacity:1; transition-delay:2s; transition:opacity 2s; display:block; width:100%; height:100%; object-fit:cover;"/>
 					<div id="content">
 						<h1 style="color:black;">Amity</h1><br/>
-						<p style="color:black;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p><br/>
-						<div style="display:flex; justify-content:space-around;">
-							<a class="button" href="#">Login</a>
+						<p style="color:black;" id="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p><br/>
+						<div style="display:flex; justify-content:flex-start;">
+							<a class="button" href="#" style="margin-right:48px;">Login</a>
 							<a class="button" href="#">Sign Up</a>
 						</div>
 					</div>
@@ -50,6 +58,13 @@
 			</div>
 		</div>
 		<script>
+			function setDescription() {
+				var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
+				if(width >= 800)
+					document.getElementById('description').innerHTML = "Ever find yourself with time on your hands, but none of your colleagues are free? You probably want to play soccer, but don't have a big enough group. Or you just want to discuss/learn about something you are passionate about. Perhaps you want to mentor someone for a short time, or be a mentee. Or you probably should have your lunch by yourself today, because magically everyone else you know have plans elsewhere. Maybe you are an intern or a new hire and are looking to network, but don't know where to start. With Amity, you can find people nearby, within Microsoft, looking to do exactly what you want to do."
+				else
+					document.getElementById('description').innerHTML = "Learn. Grow. Network."
+			}
 			function fade() {
 				document.getElementById('background').style.opacity = "0.5";
 				document.getElementById('content').style.opacity = "1";
