--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,15 @@
 <html>
 	<head>
 		{% if title %}
-			<title>{{title}}</title>
+			<title>Amity | {{title}}</title>
 		{% else %}
 			<title>Amity</title>
 		{% endif %}
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
 	</head>
 	{% block content %}{% endblock %}
