--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,8 +47,8 @@
 				<div class="col-sm-12" style="padding:0;">
 					<img id="background" onload="fade()" src="/static/images/wall2.jpg" style="opacity:1; transition-delay:2s; transition:opacity 2s; display:block; width:100%; height:100%; object-fit:cover;"/>
 					<div id="content">
-						<h1 style="color:black;">Amity</h1><br/>
-						<p style="color:black;" id="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p><br/>
+						<h1 style="color:black; font-family: 'Advent Pro">Amity</h1><br/>
+						<p style="color:#444;" id="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p><br/>
 						<div style="display:flex; justify-content:flex-start;">
 							<a class="button" href="#" style="margin-right:48px;">Login</a>
 							<a class="button" href="#">Sign Up</a>
@@ -61,7 +61,7 @@
 			function setDescription() {
 				var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 				if(width >= 800)
-					document.getElementById('description').innerHTML = "Ever find yourself with time on your hands, but none of your colleagues are free? You probably want to play soccer, but don't have a big enough group. Or you just want to discuss/learn about something you are passionate about. Perhaps you want to mentor someone for a short time, or be a mentee. Or you probably should have your lunch by yourself today, because magically everyone else you know have plans elsewhere. Maybe you are an intern or a new hire and are looking to network, but don't know where to start. With Amity, you can find people nearby, within Microsoft, looking to do exactly what you want to do."
+					document.getElementById('description').innerHTML = "Ever find yourself with time on your hands, but none of your colleagues are free? You probably want to play soccer, but don't have a big enough group. Or you just want to discuss/learn something you are passionate about. Perhaps you want to mentor someone for a short time, or be a mentee. Or you probably should have your lunch by yourself today, because magically everyone else you know have plans elsewhere. Maybe you are an intern or a new hire and are looking to network, but don't know where to start. With Amity, you can find people nearby, within Microsoft, looking to do exactly what you want to do."
 				else
 					document.getElementById('description').innerHTML = "Learn. Grow. Network."
 			}
