--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -12,38 +12,26 @@
 	</style>
 	<div style="height:90vh; padding-left:16px;">
 		<div style="width:100%; height:270px; display:flex; flex-direction:column; justify-content:space-around;">
-			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">Pending</p>
+			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">People You've Met</p>
 			<div style="height:250px; overflow-x:auto; overflow-y:hidden; white-space:nowrap;" class="scrollbar">
-				<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block;">
-					<div style="width:200px; height:50px; border:1px solid grey;">
-						<p>CSS over Lunch</p>
-					</div>
-					<div style="width:200px; height:100px; border:1px solid grey;">
-						<p>23/07/2018 | 12:30-13:15</p>
-						<p>B1 cafeteria</p>
-						<p>2/5 people attending</p>
-					</div>
-					<div style="width:200px; height:50px; border:1px solid grey;">
-						<a class="button" href="#" data-toggle="modal" data-target="#dropout">Drop Out</a>
-						<a class="button" href="#" data-toggle="modal" data-target="#expand">Expand</a>
-					</div>
+				<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block; display:flex; align-items:center; justify-content:center;">
+					<p>Richard Roe</p>
 				</div>
 			</div>
 		</div>
 		<div style="width:100%; height:270px; display:flex; flex-direction:column; justify-content:space-around;">
-			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">To-Do</p>
+			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">Past Events</p>
 			<div style="height:250px; overflow-x:auto; overflow-y:hidden; white-space:nowrap;" class="scrollbar">
 				<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block;">
 					<div style="width:200px; height:50px; border:1px solid grey;">
 						<p>CSS over Lunch</p>
 					</div>
 					<div style="width:200px; height:100px; border:1px solid grey;">
-						<p>23/07/2018 | 12:30-13:15</p>
+						<p>19/07/2018 | 12:30-13:15</p>
 						<p>B1 cafeteria</p>
-						<p>2/5 people attending</p>
+						<p>5/5 people attended</p>
 					</div>
 					<div style="width:200px; height:50px; border:1px solid grey;">
-						<a class="button" href="#" data-toggle="modal" data-target="#dropout">Drop Out</a>
 						<a class="button" href="#" data-toggle="modal" data-target="#expand">Expand</a>
 					</div>
 				</div>
@@ -61,7 +49,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Lunch</p>
-					<p>23/07/2018 | 12:30-13:15</p>
+					<p>19/07/2018 | 12:30-13:15</p>
 					<p>B1 cafeteria</p>
 					<p>People</p>
 					<div style="overflow-x:auto; white-space:nowrap;" class="scrollbar">
@@ -69,26 +57,10 @@
 							<p>Jane Doe</p>
 						</div>
 					</div>
-					<p>Let's share our knowledge on CSS with each other, over lunch this Monday.</p>
+					<p>Let's share our knowledge on CSS with each other, over lunch.</p>
 				</div>
 				<div class="modal-footer">
 					<a class="button" href="#" data-toggle="modal" data-target="#dropout">Drop Out</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="modal fade" id="dropout" role="dialog">
-		<div class="modal-dialog">
-		<!-- Modal content-->
-			<div class="modal-content">
-				<div class="modal-body">
-					<!-- Check time -->
-					<p>Please confirm that you want to drop out of the event "CSS over Lunch"</p>
-				</div>
-				<div class="modal-footer">
-					<a class="button" href="#">Confirm</a>
-					<a class="button" href="#" data-dismiss="modal">Cancel</a>
 				</div>
 			</div>
 		</div>
