--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -10,58 +10,81 @@
 		    background-color: #999;
 		}
 	</style>
+	{% macro person(item) -%}
+		<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block; display:flex; align-items:center; justify-content:center;">
+			<p>{{item}}</p>
+		</div>
+	{%- endmacro %}
+	{% macro card(item, index) -%}
+		<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block;">
+			<div style="width:200px; height:50px; border:1px solid grey;">
+				<p>{{item.event_name}}</p>
+			</div>
+			<div style="width:200px; height:100px; border:1px solid grey; overflow-x:auto; overflow-y:hidden;">
+				<p>{{item.event_start}} to {{item.event_end}}</p>
+				<p>{{item.event_location}}</p>
+				<p>5/5 people attended</p>
+			</div>
+			<div style="width:200px; height:50px; border:1px solid grey;">
+				<a class="button" href="#" data-toggle="modal" data-target="#expand{{index}}">Expand</a>
+			</div>
+		</div>
+	{%- endmacro %}
+	{% macro modals(item, index) -%}
+		<div class="modal fade" id="expand{{index}}" role="dialog">
+			<div class="modal-dialog">
+			<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">{{item.event_name}}</h4>
+					</div>
+					<div class="modal-body">
+						<p>{{item.event_type}}</p>
+						<p>Food: {{item.food}}</p>
+						<p>{{item.event_start}} to {{item.event_end}}</p>
+						<p>{{item.event_location}}</p>
+						<p>People</p>
+						<div style="overflow-x:auto; white-space:nowrap;" class="scrollbar">
+							{% for person in item.people %}
+								<div style="width:70px; display:inline-block;">
+									<p>{{person}}</p>
+								</div>
+							{% endfor %}
+						</div>
+						<p>{{item.event_desc}}</p>
+					</div>
+	<!--
+					<div class="modal-footer">
+						<a class="button" href="#" data-toggle="modal" data-target="#dropout">Drop Out</a>
+					</div>
+	-->
+				</div>
+			</div>
+		</div>
+	{%- endmacro %}
 	<div style="height:90vh; padding-left:16px;">
 		<div style="width:100%; height:270px; display:flex; flex-direction:column; justify-content:space-around;">
 			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">People You've Met</p>
 			<div style="height:250px; overflow-x:auto; overflow-y:hidden; white-space:nowrap;" class="scrollbar">
-				<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block; display:flex; align-items:center; justify-content:center;">
-					<p>Richard Roe</p>
-				</div>
+				{% if people|length==0 %}
+					<p>You haven't met anyone yet!</p>
+				{% endif %}
+				{% for item in people %}
+					{{person(item)}}
+				{% endfor %}
 			</div>
 		</div>
 		<div style="width:100%; height:270px; display:flex; flex-direction:column; justify-content:space-around;">
 			<p style="color:#74838B; font-size:16px; margin-left:8px; margin-top:8px;">Past Events</p>
 			<div style="height:250px; overflow-x:auto; overflow-y:hidden; white-space:nowrap;" class="scrollbar">
-				<div style="width:200px; height:200px; margin-left:8px; margin-right:16px; box-shadow:1px 1px 20px #ddd; display:inline-block;">
-					<div style="width:200px; height:50px; border:1px solid grey;">
-						<p>CSS over Lunch</p>
-					</div>
-					<div style="width:200px; height:100px; border:1px solid grey;">
-						<p>19/07/2018 | 12:30-13:15</p>
-						<p>B1 cafeteria</p>
-						<p>5/5 people attended</p>
-					</div>
-					<div style="width:200px; height:50px; border:1px solid grey;">
-						<a class="button" href="#" data-toggle="modal" data-target="#expand">Expand</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="modal fade" id="expand" role="dialog">
-		<div class="modal-dialog">
-		<!-- Modal content-->
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title">CSS over Lunch</h4>
-				</div>
-				<div class="modal-body">
-					<p>Lunch</p>
-					<p>19/07/2018 | 12:30-13:15</p>
-					<p>B1 cafeteria</p>
-					<p>People</p>
-					<div style="overflow-x:auto; white-space:nowrap;" class="scrollbar">
-						<div style="width:70px; display:inline-block;">
-							<p>Jane Doe</p>
-						</div>
-					</div>
-					<p>Let's share our knowledge on CSS with each other, over lunch.</p>
-				</div>
-				<div class="modal-footer">
-					<a class="button" href="#" data-toggle="modal" data-target="#dropout">Drop Out</a>
-				</div>
+				{% if events|length==0 %}
+					<p>You haven't attended any event yet!</p>
+				{% endif %}
+				{% for item in events %}
+					{{card(item, loop.index)}}
+					{{modals(item, loop.index)}}
+				{% endfor %}
 			</div>
 		</div>
 	</div>
